# math.rs

./: Cargo.toml  LICENSE-MIT  README
src/: abs.rs  acos.rs  arithmetic.rs  asin.rs  ceil.rs  copysign.rs  cos.rs  dim.rs  exp.rs  floor.rs  fmod.rs  hypot.rs  ilogb.rs  ldexp.rs  lib.rs  llround.rs  logb.rs  lround.rs  ma.rs  max.rs  min.rs  modf.rs  nearbyint.rs  nextafter.rs  pow.rs  rint.rs  round.rs  rounding.rs  scalbln.rs  scalbn.rs  sign.rs  signops.rs  sin.rs  sqrt.rs  tan.rs  trunc.rs  utils.rs
tests/: arithmetic.rs  introspection.rs  other.rs  rounding.rs  signops.rs  sqrtlog.rs  testutils.rs  trigonometry.rs
