[package]

name = "math"
version = "0.0.1"
authors = ["Simonas Kazlauskas <git@kazlauskas.me>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/nagisa/math.rs"
description = "Software implementations of some libm functions in Rust"

[dependencies]
cty = "0.1"

[dev-dependencies]
quickcheck="0.4"
libloading="0.3"
